# Logic-Agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
actions/: A1_construct_semiotic_square.py  A2_verify_fol_cfg.py  A3_verify_logical_relation.py  A4_context_handle.py  A5_reasoning.py  A5_reasoning_light.py
analyze/: analyze.py
data/RepublicQA/: all.json  dev.json
prompts/FOLIO/: A1_ConstructSemioticSquare.txt  A5_Reasoning.txt  A5_Verify.txt
prompts/ProntoQA/: A1_ConstructSemioticSquare.txt  A4_ContextThandle.txt  A5_Reasoning.txt
prompts/ProofWriter/: A1_ConstructSemioticSquare.txt  A4_ContextHandle.txt  A5_Plan.txt  A5_Reasoning.txt  A5_Verify.txt  test.txt
prompts/ProverQA/: A4_ContextHandle.txt  A5_Plan.txt
prompts/RepublicQA/: A1_ConstructSemioticSquare.txt  A4_ContextHandle.txt  A5_Plan.txt  A5_Reasoning.txt  A5_Verify.txt
role/: phil.py
tools/: evaluate.py  fol_parser.py
utils/: data_prep.py  global_vars.py  save_result.py  token_logger.py
